--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,13 @@
     <dimen name="checkbox_padding_start">8dp</dimen>
     <dimen name="icon_button_padding">12dp</dimen>
     <dimen name="icon_button_min_size">48dp</dimen>
+
+    <dimen name="indent">16dp</dimen>
+    <dimen name="indent_likes">8dp</dimen>
+    <dimen name="indent_saw_count">7dp</dimen>
+    <dimen name="avatar_size">48dp</dimen>
+    <dimen name="menu_button_size">24dp</dimen>
+    <dimen name="no_internet_width">300dp</dimen>
+    <dimen name="no_internet_height">100dp</dimen>
 </resources>
 
